--- a/src/pages/Game/View.css
+++ b/src/pages/Game/View.css
@@ -11,6 +11,7 @@
   width: min(525px, 90vh) !important;
   height: 90vw !important;
   height: min(525px, 90vh) !important;
+  z-index: -1;
 }
 #Game-View #move-div {
   max-height: 90vh; /* Firefox mobile compat */
