--- a/src/pages/Game/play/style.scss
+++ b/src/pages/Game/play/style.scss
@@ -32,6 +32,7 @@
             .name {
               display: flex;
               margin-left: 1.5vh;
+              white-space: nowrap;
             }
 
             img {
